--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,10 @@ html {
     margin: 0;
     width: 100%;
     height: 100%;
-    
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 body {
     width: 100%;
@@ -63,7 +66,7 @@ a {
     position: absolute;
     right: 0.5rem;
     top: 0.5rem;
-    font-size: 18pt;
+    font-size: 16pt;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     border-radius: 50%;
     background-color: #6ba6ff;
@@ -171,4 +174,60 @@ transition: 0.1s;
     border-color: lightgray;
     border-left: none;
     border-top: none;
+}
+
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 15px;
+  border-radius: 5px;  
+  background: #d3d3d3;
+  outline: none;
+  /* opacity: 0.7; */
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+  
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%; 
+  background: #6ba6ff;
+  cursor: pointer;
+  
+}
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #6ba6ff;
+  cursor: pointer;
+}
+
+.slidecontainer {
+  width: 80%;
+    margin: auto;
+}
+
+#ms-out {
+  margin-left: 8.5rem;
+  margin-right: 0.4rem;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+#delay {
+  font-size: 16pt;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin-left: 0.85rem;
+  padding-top: 0.5rem;
+  padding-bottom: 1rem;
+}
+
+span {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
 }
