--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
+@media only screen
+  and (orientation: landscape) {
+    
+
 html {
     padding: 0;
     margin: 0;
@@ -24,6 +28,10 @@ body {
     transform: translate(-50%, -50%);
     border-style: solid;
     border-color: lightgray;
+    max-width: 100%;
+    max-height: 100%;
+    height: auto;
+    width: auto;
 }
 
 button {
@@ -237,4 +245,6 @@ span {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 16pt;
   margin-left: 0.9rem;
+}
+
 }
