--- a/styles/style.css
+++ b/styles/style.css
@@ -32,6 +32,14 @@ body {
     max-height: 100%;
     height: auto;
     width: auto;
+    cursor: crosshair;
+}
+
+#drawing-tools {
+  margin-top: 0.8rem;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 16pt;
+  margin-left: 0.9rem;
 }
 
 button {
@@ -176,12 +184,23 @@ transition: 0.1s;
 .control-container {
     background-color: #f0f0f0;
     width: 18.97rem;
-    height: 20rem;
+    height: 30rem;
     border-bottom-right-radius: 0.7rem;
     border-style: solid;
     border-color: lightgray;
     border-left: none;
     border-top: none;
+}
+
+.draw-button {
+  width: 31.5%;
+  margin: 0px;
+  margin-top: 0.5rem;
+  float:left;
+}
+
+.draw-button-active {
+  background-color: #408cff;
 }
 
 .slider {
