--- a/styles/style.css
+++ b/styles/style.css
@@ -32,7 +32,7 @@ body {
     max-height: 100%;
     height: auto;
     width: auto;
-    cursor: crosshair;
+    cursor: pointer;
 }
 
 #drawing-tools {
