--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,9 @@
 @media only screen
   and (orientation: landscape) {
     
+    .full-length {
+      width: calc( 100% - 1rem );
+    }
 
 html {
     padding: 0;
@@ -19,6 +22,14 @@ body {
     overflow:hidden;
     padding: 0;
     margin: 0;
+}
+
+#download {
+  position: absolute;
+  bottom: 0.5rem;
+  right: 0.5rem;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  width:fit-content
 }
 
 #canvas {
@@ -43,6 +54,7 @@ body {
 }
 
 button {
+  text-decoration: none;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
     font-size: 18pt;
@@ -78,7 +90,7 @@ button:hover {
     width: 40%;
 }
 
-a {
+.a {
     position: absolute;
     right: 0.5rem;
     top: 0.5rem;
