--- a/styles/style.css
+++ b/styles/style.css
@@ -251,7 +251,7 @@ transition: 0.1s;
 .control-container {
     color: #f8f8f8;
     background-color: #191d1f;
-    overflow-y: scroll;
+    overflow-y: hidden;
     width: 18.97rem;
     height: 100%;
     border-style: solid;
@@ -382,4 +382,9 @@ span {
 .expand > span {
   vertical-align: bottom;
   
+}
+
+.side-scroll-container {
+  height: calc(100% - 3.6rem);
+  overflow-y: scroll;
 }
