--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -1,273 +1,25 @@
 @media only screen
   and (orientation: portrait) {
     
-
-    html {
-        padding: 0;
-        margin: 0;
-        width: 100%;
-        height: 100%;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-        overflow: hidden;
-    }
-    body {
-        width: 100%;
-        height: 100%;
-        background-color: #fefefe;
-        overflow:hidden;
-        padding: 0;
-        margin: 0;
-    }
-    
-    #canvas {
-        position: absolute;
-        /* top: 50%; */
-        left: 50%;
-        transform: translate(-50%, -0%);
-        border-style: solid;
-        border-color: lightgray;
-        max-width: 100%;
-        max-height: 100%;
-        height: auto;
-        width: auto;
-        bottom: 0px;
-    }
-    
-    button {
-        padding-top: 0.5rem;
-        padding-bottom: 0.5rem;
-        font-size: 18pt;
-        cursor: pointer;
-        border-style: solid;
-        color: #f8f8f8;
-        background-color: #6ba6ff;
-        transition: 0.1s;
-        border-width: 0px;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    
-    }
-    
-    button:active {
-        background-color: #f0f0f0;
-    }
-    
-    button:hover {
-        background-color: #f0f0f0;
-        color: #333;
-    }
-    
-    #runner {
-        /* border-bottom-right-radius: 0.7rem; */
-        margin-left: -4px;
-        width: 60%;
-    }
-    
-    #retry {
-        border-right-style: solid;
-        border-right-width: 0.1rem;
-        border-right-color: #7bb0ff;
-        width: 40%;
-    }
-    
-    a {
-        position: absolute;
-        right: 0.5rem;
-        top: 0.5rem;
-        font-size: 16pt;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        border-radius: 50%;
-        background-color: #6ba6ff;
-        color: #f8f8f8;
-        height: 2.5rem;
-        width: 2.5rem;
-        text-align: center;
-        line-height: 2.5rem;
-        text-decoration: none;
-        vertical-align: center;
-        transition: 0.1s;
-        display:none;
-    }
-    
-    a:hover {
-        background-color: #f0f0f0;
-        color: #333;
-    }
-    
-    /* The container */
-    .container {
-        margin-top: 1rem;
-        margin-left: 1rem;
-        display: block;
-        position: relative;
-        padding-left: 35px;
-        margin-bottom: 12px;
-        cursor: pointer;
-        font-size: 22px;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    
-      }
-      
-      /* Hide the browser's default checkbox */
-      .container input {
-        position: absolute;
-        opacity: 0;
-        cursor: pointer;
-        height: 0;
-        width: 0;
-      }
-      
-      /* Create a custom checkbox */
-      .checkmark {
-        position: absolute;
-        top: 0;
-        left: 0;
-        height: 25px;
-        width: 25px;
-        background-color: rgb(202, 202, 202);
-        margin-top: 0.25rem;
-    transition: 0.1s;
-      }
-      
-      /* On mouse-over, add a grey background color */
-      .container:hover input ~ .checkmark {
-        margin-top: 0.25rem;
-    
-        background-color: rgb(177, 177, 177);
-      }
-      
-      /* When the checkbox is checked, add a blue background */
-      .container input:checked ~ .checkmark {
-        background-color: #6ba6ff;
-        margin-top: 0.25rem;
-    transition: 0.1s;
-    
-      }
-      
-      /* Create the checkmark/indicator (hidden when not checked) */
-      .checkmark:after {
-        content: "";
-        position: absolute;
-        display: none;
-      }
-      
-      /* Show the checkmark when checked */
-      .container input:checked ~ .checkmark:after {
-        display: block;
-      }
-
-      #drawing-tools {
-        display:none;
-      }
-
-      /* Style the checkmark/indicator */
-      .container .checkmark:after {
-        left: 9px;
-        top: 5px;
-        width: 5px;
-        height: 10px;
-        border: solid white;
-        border-width: 0 3px 3px 0;
-        -webkit-transform: rotate(45deg);
-        -ms-transform: rotate(45deg);
-        transform: rotate(45deg);
-      }
-    
     .control-container {
-        background-color: #f0f0f0;
-        width: calc( 100% );
-        height: 100%;
-        overflow-y: auto;
-        /* border-bottom-right-radius: 0.7rem; */
-        border-style: solid;
-        border-color: #f0f0f0;
-        border-left: none;
-        border-top: none;
-    }
-    
-    .slider {
-      -webkit-appearance: none;
-      width: 100%;
-      height: 15px;
-      border-radius: 5px;  
-      background: #d3d3d3;
-      outline: none;
-      /* opacity: 0.7; */
-      -webkit-transition: .2s;
-      transition: opacity .2s;
-      
-    }
-    
-    .slider::-webkit-slider-thumb {
-      -webkit-appearance: none;
-      appearance: none;
-      width: 25px;
-      height: 25px;
-      border-radius: 50%; 
-      background: #6ba6ff;
-      cursor: pointer;
-      
-    }
-    
-    .slider::-moz-range-thumb {
-      width: 25px;
-      height: 25px;
-      border-radius: 50%;
-      background: #6ba6ff;
-      cursor: pointer;
-    }
-    
-    .slidecontainer {
-      width: 80%;
-        margin: auto;
-    }
-    
-    #ms-out {
-      margin-left: 8.5rem;
-      margin-right: 0.4rem;
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    }
-    
-    #delay {
-      font-size: 16pt;
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-      margin-left: 0.85rem;
-      padding-top: 0.5rem;
-      padding-bottom: 1rem;
-    }
-    
-    span {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    
-    }
-    
-    #gen-out {
-      margin-top: 0.8rem;
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-      font-size: 16pt;
-      margin-left: 0.9rem;
-    }
-    
-    #auto-retry {
-      display:none;
-    }
-    
-    #auto-retry-text {
-      display:none;
-      
+      width: 0px !important;
+      position: absolute;
+      left: 0px;
+      z-index: 99;
     }
 
-    #auto-retry-check {
-      display: none;
+    
+    #canvasContainer {
+      position: absolute;
+      top: 0px;
+      right: 0px;
+      height: 100%;
+      width:  100%;
+      z-index: 1;
     }
 
-    .no-mobile {
+    .desktopOnly {
       display:none;
     }
+
 }
