better mobile support

--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -16,5 +16,16 @@
     .mobileOnly {
         display:none;
     }
-
+    #runner {
+        /* border-bottom-right-radius: 0.7rem; */
+        margin-left: -4px;
+        width: 60%;
+    }
+    
+    #retry {
+        border-right-style: solid;
+        border-right-width: 0.1rem;
+        border-right-color: #0f1113;
+        width: 40%;
+    }
 }
