--- a/styles/style.css
+++ b/styles/style.css
@@ -126,18 +126,7 @@ button:active > img {
   filter: invert(0);
 }
 
-#runner {
-    /* border-bottom-right-radius: 0.7rem; */
-    margin-left: -4px;
-    width: 60%;
-}
 
-#retry {
-    border-right-style: solid;
-    border-right-width: 0.1rem;
-    border-right-color: #0f1113;
-    width: 40%;
-}
 
 .a {
     position: absolute;
@@ -399,4 +388,22 @@ input[type="color"]::-webkit-color-swatch {
 
 .openWidth {
   width: 85% !important;
+}
+
+.mobileHeader {
+  width: 100%;
+  height: 3.6rem;
+  background-color: #0f1113;
+}
+
+/* #modalOpen {
+  float:left;
+} */
+
+.mobileHeaderText {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin-left: 0.5rem;
+    color: #f8f8f8;
+    font-size: 18pt;
+    vertical-align: super;
 }
