--- a/styles/style.css
+++ b/styles/style.css
@@ -408,6 +408,12 @@ input[type="color"]::-webkit-color-swatch {
     color: #f8f8f8;
     font-size: 18pt;
     vertical-align: super;
+    
+    position: absolute;
+    margin-top: 0.75rem;
+    left: 50%;
+    -ms-transform: translate(-50%, 0%);
+    transform: translate(-50%, 0%);
 }
 
 .veil {
